# ros_basic_setup

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  ruff.toml
.github/workflows/: analysis-cpp.yaml  analysis-python.yaml  analysis.yaml  analysis.yml  build.yaml  ci.yaml  main.yml
ros2_ws/: .gitignore
ros2_ws/src/simple_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/simple_pkg/include/simple_pkg/: simple_publisher.hpp
ros2_ws/src/simple_pkg/simple_pkg/: simple_publisher.py
ros2_ws/src/simple_pkg/src/: simple_publisher.cpp
scripts/: build-ros.sh
